--- a/templates/addWish.html
+++ b/templates/addWish.html
@@ -1,71 +1,145 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+ 
+<head>
     <title>Python Flask Bucket List App</title>
-
-   
+ 
+ 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    
-    <script src="../static/js/jquery-1.11.2.js"></script>
-    
-   
-  </head>
-
-  <body>
-
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../static/js/jquery.fileupload.js"></script>
+ 
+<script type="text/javascript" src="../static/js/jquery.fileupload-process.js"></script>
+ 
+<script type="text/javascript" src="../static/js/jquery.fileupload-ui.js"></script>
+    <style>
+        .btn-file {
+            position: relative;
+            overflow: hidden;
+        }
+         
+        .btn-file input[type=file] {
+            position: absolute;
+            top: 0;
+            right: 0;
+            min-width: 100%;
+            min-height: 100%;
+            font-size: 100px;
+            text-align: right;
+            filter: alpha(opacity=0);
+            opacity: 0;
+            outline: none;
+            background: white;
+            cursor: inherit;
+            display: block;
+        }
+    </style>
+ 
+</head>
+ 
+<body>
+ 
     <div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-	    <li role="presentation" class="active"><a href="#">Add Item</a></li>
-            <li role="presentation" ><a href="/logout">Logout</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Python Flask App</h3>
-      </div>
-     <section>
-      <form class="form-horizontal" method="post" action="/addWish">
-<fieldset>
-
-<!-- Form Name -->
-<legend>Create Your Wish</legend>
-
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="txtTitle">Title</label>  
-  <div class="col-md-4">
-  <input id="txtTitle" name="inputTitle" type="text" placeholder="placeholder" class="form-control input-md">
-  </div>
-</div>
-
-<!-- Textarea -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="txtPost">Post</label>
-  <div class="col-md-4">                     
-    <textarea class="form-control" id="txtPost" name="inputDescription" ></textarea>
-  </div>
-</div>
-
-<!-- Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="singlebutton"></label>
-  <div class="col-md-4">
-    <input id="singlebutton" name="singlebutton" class="btn btn-primary" type="submit" value="Publish" />
-  </div>
-</div>
-
-</fieldset>
-</form>
-      
-</section>
-      <footer class="footer">
-        <p>&copy; Company 2015</p>
-      </footer>
-
+        <div class="header">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="#">Add Item</a>
+                    </li>
+                    <li role="presentation"><a href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">Python Flask App</h3>
+        </div>
+ 
+        <form role="form" method="post" action="/addWish">
+ 
+ 
+            <!-- Form Name -->
+            <legend>Create Your Wish</legend>
+ 
+            <!-- Text input-->
+            <div class="form-group">
+                <label for="txtTitle">Title</label>
+ 
+                <input id="txtTitle" name="inputTitle" type="text" placeholder="placeholder" class="form-control input-md">
+ 
+            </div>
+ 
+            <!-- Textarea -->
+            <div class="form-group">
+                <label for="txtPost">Description</label>
+ 
+                <textarea class="form-control" id="txtPost" name="inputDescription"></textarea>
+ 
+            </div>
+ 
+ 
+            <div class="form-group">
+                <label for="txtPost">Photos</label>
+ 
+                <div class="input-group">
+                    <span class="input-group-btn">
+                    <span class="btn btn-primary btn-file">
+                        Browse&hellip; <input type="file" id="fileupload" name="file" multiple>
+                    </span>
+                    </span>
+                    <input type="text" class="form-control" readonly>
+                </div>
+ 
+            </div>
+ 
+            <div class="form-group">
+                <label>Mark this as private and not visible to others.</label>
+                <br/>
+                <input type="checkbox"> Mark as Private <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+            </div>
+ 
+            <div class="form-group">
+                <label>Have you already accomplished this?</label>
+                <br/>
+                <input type="checkbox"> Mark as Done <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+            </div>
+ 
+ 
+ 
+ 
+            <!-- Button -->
+            <div class="form-group">
+ 
+                <p class="text-center">
+                    <input id="singlebutton" name="singlebutton" class="btn btn-primary" type="submit" value="Publish" />
+                </p>
+            </div>
+ 
+ 
+        </form>
+ 
+        <footer class="footer">
+            <p>&copy; Company 2015</p>
+        </footer>
+ 
     </div>
-  </body>
-</html>
+<script>
+  $(function() {
+    $('#fileupload').fileupload({
+        url: 'upload',
+        dataType: 'json',
+        add: function(e, data) {
+            data.submit();
+        },
+        success: function(response, status) {
+            console.log(response);
+        },
+        error: function(error) {
+            console.log(error);
+        }
+    });
+})
 
+</script>
+</body>
+ 
+</html>
